Menu naar links

--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -44,7 +44,7 @@ body {
 	list-style:none;
 	padding:0 0px 0px 278px;
 	float: right;
-	width: 415px;
+	width: 75%;
 }
 #topmenu li {
 	display:inline;
