--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -35,7 +35,7 @@ body {
 
 #header{
 	height:189px;
-	background:url(images/Header.png) no-repeat left top;
+	background:url(images/Header.png) no-repeat center top;
 	clear: both;
 }
 /*Header Menu*/
