--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -75,8 +75,7 @@ body {
 	background-color: #FFFFFF;
 }
 #mainpage {
-	width:600px;
-	float:left;
+	width:60%;
 	padding:5px 5px 5px 0px;
 	height:550px
 }
