--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -110,6 +110,21 @@ h1, h2, h3, h4, h5 {
 	font-size:18px;}
 #mainpage h5 {
 	font-size:16px;}
+	
+#namen {
+	border: solid 1px #C8C8FF;
+}
+
+#namen p.bg0 {
+	padding: 5px;
+	background-color: #c0c0c0;
+}
+
+#namen p.bg1 {
+	padding: 5px;
+	background-color: #80ffff;
+}
+
 .style_2 {
 	font-size: 7px;
 	color: #000011;
@@ -130,6 +145,14 @@ h1, h2, h3, h4, h5 {
 	display:block; 
 	padding:0px; 
 	border-bottom: dashed 1px #D6E4A7;}
+
+#detail td {
+            border: solid 1px #C8C8FF;
+            list-style-type: none;
+            margin-bottom: 5px;
+            padding: 1px;
+            color: #333;
+        }
 
 /*Sidebar*/
 #sidebar {
