--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -122,7 +122,7 @@ h1, h2, h3, h4, h5 {
 
 #namen p.bg1 {
 	padding: 5px;
-	background-color: #80ffff;
+	background-color: #c0c0c0;
 }
 
 .style_2 {
