--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -198,6 +198,33 @@ menu li ul {
 .foutmelding {
 	color:#B32C0E;	
 }
+
+/* Relaties */
+#up { 
+   width:90%; 
+   height:100px;
+   background:red;
+   float:top; 
+}
+#left { 
+   width:30%; 
+   height:400px;
+   background:green;
+   float:left; 
+}
+#center { 
+   width:30%; 
+   height:400px;
+   background:yellow;
+   float:left; 
+}
+#right { 
+   width:30%; 
+   height:400px;
+   background:blue;
+   float:left; 
+}
+
 /**/
 /*
 .clearleft {
