--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -26,22 +26,21 @@ body {
 	color: #000011;
 }
 #wrap{
-	width: 90%;
+	width: 100%;
 	margin:0px auto 15px auto;
 	font-family:Verdana, Arial, Helvetica, sans-serif;
 	font-size:12px;
 	color:#666666;
 }
 #topbar{
-	height:200px;
-	background: #FFFFFF;
+	background-color: #21201D;
+	text-align: center;
 }
 #top-links {
     float: left;
 }
 #top-midden {
-	box-sizing: border-box;
-    display: transparent;
+	display: inline-block;
 }
 #top-rechts {
     float: right;
@@ -50,7 +49,6 @@ img {
 	border: none;
 }
 h1  {
-/*	height: 200px;*/
 	color:#B32C0E;
 	font-weight:bold;
 	font-family: Arial, Helvetica, sans-serif;
@@ -65,7 +63,6 @@ h2, h3, h4, h5 {
 	text-decoration :none;
 	font-size:24px;
 	color:#000000;
-/*	height:100px;*/
 	padding-top:120px;
 }
 #topmenu {
@@ -105,12 +102,12 @@ h2, h3, h4, h5 {
 	clear: both;
 }
 #content {
+	width:80%;
 	background-color: #FFFFFF;
 	padding-top: 36px;
 }
 #mainpage {
-	width:70%;
-	padding:0px 5px 5px 0px;
+	padding:0px 5px 5px 50px;
 	height: 650px;
 }
 #mainpage h2 {
