--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -31,7 +31,7 @@ body {
 	margin:0px auto 15px auto;
 	font-family:Verdana, Arial, Helvetica, sans-serif;
 	font-size:12px;
-	color:#666666;
+	color: black;
 }
 #topbar{
 	background-color: #21201D;
@@ -51,7 +51,7 @@ img {
 	border: none;
 }
 h1  {
-	color:#B32C0E;
+	color:#FFBE00;
 	font-size: 40px;
 	font-weight: bold;
 	font-family: Arial, Helvetica, sans-serif;
@@ -125,8 +125,9 @@ h2, h3, h4, h5 {
 	text-align: center;
 }
 #mainpage p {
-	line-height:10px;
+	line-height:18	px;
 	margin:10px 0px 0px 0px;
+	font-size: 14px;
 }
 #sidebar {
 	margin:0px 0px 0px 0px;
@@ -174,7 +175,7 @@ menu li ul {
 }
 #footer {
 	width:100%;
-	height:50px;
+	height:55px;
 	padding:0px 5px 5px 0px;
 	color:#FFFFFF;
 	text-align: center;
